<resources>
    <string name="app_name">Tates</string>
    <string name="scroll">Scrol</string>>
    <string name="mainscrol">mainscroll</string>
    <string name="moneyscrol">moneyscroll</string>
    <string name="goalsscrol">goalsscroll</string>
    <string name="chip">chip</string>
    <string name="actbutton">ActionButton</string>
    <string name="prog">prog</string>
    <string name="imbutt">imagebutton</string>
    <string name="specealscrol">specealscroll</string>
    <string name="money1">Если у тебя нет листвы, а ты дерево, это как если ты мужчина и у тебя нет Бугатти, где то в своей жизни ты про***лся! Нет так уж и сложно было купить этот Бугатти! Все что тебе нужно было сделать, это быть энергичнее чем все вокруг!</string>
    <string name="motivat">Выполняя всё вышеназванное каждый день в течении 6 месяцев вы будете...Это вы узнаете через 183 дня, а пока помните, что вы способны жить на более высоком уровне, либо вы это делаете, либо нет, решать вам. Задайте себе вопрос, доволен ли я жизнью,счастлив ли я остаться там, где я есть?Если вам не нравится ответ принимайтесь за работу, работайте больше, чем думали что работали, больше дисцелины, более высокие стандарты!</string>
    <string name="firstdesc">Эмори Эндрю Тейт III  - интернет-звезда, бывший профессиональный кикбоксер, предприниматель и успешный бизнесмен, на одном из своих последних интервью он заявил, что уже является мульти милионером.</string>
    <string name="seconddesc">Мы, мужчины, смотрим Эндрю Тейта, потому что хотим видеть себя такими же как он: сильными, богатыми, свободными, привлекательными – это некий идеал, к которому мы стремимся.</string>
    <string name="firddesc">В некоторых  видео он обзывает своих зрителей додиками и лузерами, с целью их замотивировать , это может создать ложную иллюзию, что Тейт самый крутой мужчина на планете, и не кому из нас не возможно достичь его уровня. Но это абсолютно не так!</string>
    <string name="fourdesc"> Эндрю Тейт прекрасный человек, но он как и все мы не идеален: много ругается матом, изменяет, что является грехом с точки зрения религии, является владельцем казино, что тоже противоречит его вероисповеданию, курение и алкоголь.</string>
    <string name="fivedesc">На данный момент мы проигрываем ему по многим показателям. Наша же задача слушать его советы, мотивироваться в сложные времена, чтобы через 3 года он мог сказать нам как Жуковский Пушкину ‘Победителю-ученику от побежденного учителя’.</string>
    <string name="sixdesc">Я, Николай Мустафаев, создал это приложение, чтобы помочь себе и всем мужчинам нашей необъятной России обрести свободу, стать сильными морально и физически. Если каждый из нас будет после своей работы не пить и не смотреть телевизор, а учиться чему то новому, воспитывать своих детей, заниматься спортом, то через 12 месяцев мы и не заметим, как станем героями для себя и своих близких, выйдем из матрицы и заложим крепкий фундамент своему наследию!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text1">Стремись стать супергероем. Не обычным человеком с домом побольше и машиной получше.Эндрю Тейт</string>
    <string name="text2">Высокомерие порождает самодовольство, а самодовольство порождает неудачу.Эндрю Тейт</string>
    <string name="text3">Ты именно там, где заслуживаешь быть. Измени себя, и ты изменишь свою жизнь.Эндрю Тейт </string>
    <string name="text4">Если ты не готов усердно работать, значит, ты не заслуживаешь успеха.Эндрю Тейт </string>
    <string name="text5">Интернет - это новое поле битвы на Земле, Дикий Запад, место истины и возможностей.Эндрю Тейт</string>
    <string name="text6">Пусть твоя фамилия что-нибудь значит. Только трус не заботится о своей родословной.Эндрю Тейт</string>
    <string name="text7">Если ты хочешь достичь величия, перестань спрашивать разрешения и начни действовать.Эндрю Тейт</string>
    <string name="text8">Свобода придет только тогда, когда вы больше не будете обменивать свое время на деньги.Эндрю Тейт</string>
    <string name="text9">Высокомерие - причина большей части бедности в странах первого мира.Эндрю Тейт</string>
    <string name="text10">Невзгоды закаляют мужчин. Ваш долг бросить вызов самому себе и создать свой собственный мир.Эндрю Тейт</string>
    <string name="text11">Если ты хочешь, чтобы людям было небезразлично, кто ты такой, познакомься с болью.Эндрю Тейт</string>
    <string name="text12">Мужественность - это самоконтроль. Ваш разум должен быть сильнее ваших чувств.Эндрю Тейт</string>
    <string name="text13">Мужчина, не видящий своего будущего, всегда возвращается к своему прошлому.Эндрю Тейт</string>
    <string name="text14">Ни один исключительный человек никогда не жил так, как обычный человек.Эндрю Тейт</string>
    <string name="text15">Интеллект - ничто без энергии. Идеи - ничто без энергии. Побеждают энергичные люди.Эндрю Тейт</string>
    <string name="text16">Не слушайте советов людей, которые живут жизнью, которой вы не хотите жить.Эндрю Тейт</string>
    <string name="text17">Вы должны приложить усилия, чтобы получить ту жизнь, которую вы хотите.Эндрю Тейт</string>
    <string name="text18">Не позволяйте страху удерживать вас от достижения вашей мечты.Эндрю Тейт</string>
    <string name="text19">Если вы хотите добиться успеха, вы должны быть готовы делать то, чего другие не делают.Эндрю Тейт</string>
    <string name="text20">Победители сосредотачиваются на победе, проигравшие – на победителях.Эндрю Тейт</string>

</resources>