<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasicActivity"
    android:background="@drawable/mainfone">

    <ScrollView
        android:id="@+id/mainscroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/mainscrol">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:text="УПРАВЛЯЙТЕ СВОИМ РАЗУМОМ"
                android:gravity="center"
                android:textStyle="bold|italic"
                android:textSize = "30sp"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ffoto"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firstdesc"
                android:textColor = "@color/white"
                android:textSize = "17sp"/>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/sfoto" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:textColor = "@color/white"
                android:textSize = "17sp"
                android:text="@string/seconddesc" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/fofoto" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:textColor = "@color/white"
                android:textSize = "17sp"
                android:text="@string/firddesc" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/fifoto" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:textColor = "@color/white"
                android:textSize = "17sp"
                android:text="@string/fourdesc" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/fivfoto" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:textColor = "@color/white"
                android:textSize = "17sp"
                android:text="@string/fivedesc" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/sev" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:textColor = "@color/white"
                android:textSize = "17sp"
                android:text="@string/sixdesc" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="" />
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:cornerRadius = "50dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:onClick="Chelendg"
            android:textSize="7sp"
            tools:ignore="TextSizeCheck"
            android:text="Привычки" />

        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:onClick="Chelendg"
            android:textSize="9dp"
            tools:ignore="TextSizeCheck"
            android:text="Цели" />

        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:onClick="Chelendg"
            android:text="Деньги"
            android:textSize="9dp"
            tools:ignore="TextSizeCheck" />
        <Button
            android:id="@+id/button4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:onClick="Chelendg"
            android:text="Цитаты"
            android:textSize="10dp"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>

</RelativeLayout>